# bejo-be-graph

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/agent/: graph.py  memory.py  processing.py  retrieval.py  state.py
app/config/: settings.py
app/models/: messages.py
app/routes/: chat.py  uploads.py
app/services/: add_knowledge.py  memory.py
notebooks/: docling.ipynb  document_3.xlsx  document_4.csv  documents_1.docx
